# tallyio

./: .dockerignore  .gitignore  .taskmasterconfig  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  MCP_README.md  Makefile  README.md  Tasks_2025-07-14T09-19-07.md  build.rs  claude_desktop_config.json  claude_desktop_config_new.json  clippy.toml  codecov.yml  deny.toml  module_test_mapping_report.txt  navodila.md  porocilo_o_skladnosti.txt  preberi.md  preveri.py  preverjanje_skladnosti.py  readme.md  rustfmt.toml  start-context7.bat  start-taskmaster.bat  tallyio_optimized_architecture.md  test_coverage_report.txt  test_template.txt
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/blockchain/: Cargo.toml
crates/blockchain/benches/: bench_blockchain.rs
crates/blockchain/src/: chain.rs  chain_test.rs  error.rs  lib.rs  tests.rs  types.rs
crates/chain_core/: Cargo.toml  README.md  build.rs
crates/chain_core/src/: error.rs  lib.rs  types.rs  utils.rs
crates/chain_core/src/arbitrum/: gas_optimization.rs  l2_arbitrage.rs  mod.rs  sequencer_monitor.rs
crates/chain_core/src/avalanche/: aave_integration.rs  mod.rs  traderjoe_integration.rs
crates/chain_core/src/base/: aerodrome_integration.rs  mod.rs  uniswap_integration.rs
crates/chain_core/src/bsc/: gas_oracle.rs  mod.rs  pancake_integration.rs  venus_integration.rs
crates/chain_core/src/coordination/: bridge_monitor.rs  chain_selector.rs  cross_chain_arbitrage.rs  liquidity_aggregator.rs  mod.rs
crates/chain_core/src/ethereum/: flashbots_integration.rs  gas_oracle.rs  mempool_monitor.rs  mev_boost_integration.rs  mod.rs
crates/chain_core/src/flashloan/: aave_flashloan.rs  balancer_flashloan.rs  dydx_flashloan.rs  mod.rs  optimal_selector.rs  parallel_executor.rs  uniswap_flashloan.rs
crates/chain_core/src/optimism/: mod.rs  sequencer_monitor.rs  velodrome_integration.rs
crates/chain_core/src/polygon/: aave_integration.rs  curve_integration.rs  gas_oracle.rs  mod.rs  quickswap_integration.rs
crates/chain_core/src/rpc/: connection_pool.rs  failover_manager.rs  latency_optimizer.rs  local_nodes.rs  mod.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: lib.rs
crates/core/: Cargo.toml  README.md
crates/core/benches/: engine_bench.rs  memory_bench.rs  mempool_bench.rs
crates/core/src/: config.rs  engine.rs  error.rs  lib.rs  metrics.rs  prelude.rs  types.rs  utils.rs
crates/core/src/engine/: executor.rs  mod.rs  scheduler.rs  worker.rs
crates/core/src/mempool/: analyzer.rs  filter.rs  mod.rs  watcher.rs
crates/core/src/optimization/: cpu_affinity.rs  lock_free.rs  memory_pool.rs  mod.rs  simd.rs
crates/core/src/state/: global.rs  local.rs  mod.rs  sync.rs
crates/core/src/types/: mod.rs  opportunity.rs  result.rs  transaction.rs
crates/database/: Cargo.toml
crates/database/src/: lib.rs
crates/hot_path/: Cargo.toml  README.md  build.rs
crates/hot_path/src/: atomic.rs  detection.rs  execution.rs  lib.rs  memory.rs  simd.rs  types.rs
crates/hot_path/src/atomic/: counters.rs  mod.rs  queues.rs  state.rs
crates/hot_path/src/detection/: mempool_analyzer.rs  mod.rs  opportunity_scanner.rs  pattern_matcher.rs  price_monitor.rs
crates/hot_path/src/execution/: atomic_executor.rs  bundle_builder.rs  gas_optimizer.rs  mod.rs
crates/hot_path/src/memory/: arena_allocator.rs  mod.rs  object_pool.rs  ring_buffer.rs
crates/hot_path/src/simd/: hash_ops.rs  mod.rs  price_calc.rs  search_ops.rs
crates/liquidation/: Cargo.toml
crates/liquidation/benches/: bench_liquidation.rs
crates/liquidation/src/: lib.rs
crates/secure_storage/: Cargo.toml
crates/secure_storage/benches/: secure_storage_benchmark.rs
crates/secure_storage/src/: error.rs  key.rs  lib.rs
crates/strategy_core/: Cargo.toml  README.md  build.rs  final_fix.py  fix_clippy.py  fix_compilation.py  fix_duplicates.py  fix_final.py  fix_returns.py  fix_tests.py  fix_ultra_strict.py
crates/strategy_core/src/: lib.rs
crates/strategy_core/src/arbitrage/: cross_chain_arbitrage.rs  curve_arbitrage.rs  dex_arbitrage.rs  flashloan_arbitrage.rs  mod.rs  pathfinder.rs  route_optimizer.rs  slippage_calculator.rs
crates/strategy_core/src/coordination/: conflict_resolver.rs  mod.rs  parallel_executor.rs  yield_optimizer.rs
crates/strategy_core/src/liquidation/: aave_liquidator.rs  compound_liquidator.rs  health_monitor.rs  mod.rs  multicall_optimizer.rs  profit_calculator.rs  refinance_liquidator.rs  venus_liquidator.rs
crates/strategy_core/src/priority/: execution_queue.rs  mod.rs  opportunity_scorer.rs  resource_allocator.rs
crates/strategy_core/src/time_bandit/: delay_exploitation.rs  l2_arbitrage.rs  mod.rs  sequencer_monitor.rs
crates/strategy_core/src/zero_risk/: backrun_optimizer.rs  (+3 more)
crates/web-ui/: Cargo.toml
crates/web-ui/src/: lib.rs
tests/: Cargo.toml  README.md  chaos_engineering_tests.rs  economic_tests.rs  fuzzing_tests.rs  integration.rs  integration_hot_path.rs  integration_strategy_core.rs  integration_test.rs  market_simulation_tests.rs  performance_regression_test.rs  security_tests.rs  state_consistency_tests.rs  stress_test_hot_path.rs  stress_test_strategy_core.rs  testnet_e2e_tests.rs  timing_tests.rs
tests/benchmarks/: blockchain_benchmarks.rs  core_components_benchmark.rs  secure_storage_benchmark.rs
tests/e2e/: blockchain_flow.rs
tests/fuzz/: Cargo.toml
tests/fuzz/fuzz_targets/: blockchain_events.rs  crypto_operations.rs  mempool_parsing.rs  mev_data_validation.rs  queue_operations.rs
tests/integration/: common.rs  core_components_integration.rs  mev_arbitrage_scenarios.rs  mev_storage_integration_test.rs
tests/property/: secure_storage_property_tests.rs
tests/regression/: issue_001_memory_leak.rs  secure_storage_regression.rs
tests/stress/: secure_storage_stress_tests.rs
tests/unit/: blockchain_tests.rs  core_metrics_tests.rs  secure_storage_basic_tests.rs  secure_storage_edge_cases.rs  secure_storage_tests.rs
tests/utils/: coverage_reporting.rs  latency_profiler.rs  mev_testing.rs  performance_testing.rs  security_testing.rs  test_config.rs  test_framework.rs
(+233 files in other folders)
