[workspace]
members = [
    "crates/core",
    "crates/blockchain",
    "crates/liquidation",
    "crates/security",
    "crates/database",
    "crates/metrics",
    "crates/api",
    "crates/contracts",
    "crates/web-ui",
]
resolver = "2"

[workspace.dependencies]
# Performance & Concurrency
tokio = { version = "1.35", features = ["full"] }
crossbeam = "0.8"
rayon = "1.8"
parking_lot = "0.12"

# Async & Networking
reqwest = { version = "0.11", features = ["json"] }
hyper = { version = "0.14", features = ["full"] }
tungstenite = "0.20"
tokio-tungstenite = "0.20"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# Blockchain
ethers = "2.0.14"  # Latest patch version
web3 = "0.19"

# Crypto
sha3 = "0.10"
secp256k1 = "0.28"

# Monitoring
prometheus = "0.14"
tracing = "0.1"
tracing-subscriber = "0.3"

# Memory Management
jemallocator = "0.5"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Security fixes for transitive dependencies
idna = "1.0.3"  # Fix RUSTSEC-2024-0421
ring = "0.17.8"  # Fix RUSTSEC-2025-0009

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 1

[workspace.lints.rust]
warnings = "deny"
for_loops_over_fallibles = "deny"

[workspace.lints.clippy]
# Celotne skupine
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }

# Allow specifični linti
missing_docs_in_private_items = "allow"

# Vsi ostali specifični linti
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
exit = "deny"
float_arithmetic = "warn"
integer_division = "warn"
mem_forget = "deny"
redundant_allocation = "deny"
needless_collect = "deny"
suboptimal_flops = "deny"
infinite_loop = "deny"
while_immutable_condition = "deny"
never_loop = "deny"
manual_strip = "deny"
needless_continue = "deny"
match_same_arms = "deny"
large_stack_arrays = "deny"
large_enum_variant = "deny"
mut_mut = "deny"
cast_possible_truncation = "deny"
cast_sign_loss = "deny"
cast_precision_loss = "deny"
must_use_candidate = "deny"
empty_loop = "deny"
if_same_then_else = "deny"
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
let_underscore_future = "deny"
diverging_sub_expression = "deny"
unreachable = "deny"
default_numeric_fallback = "deny"
redundant_pattern_matching = "deny"
manual_let_else = "deny"
blocks_in_conditions = "deny"
needless_pass_by_value = "deny"
single_match_else = "deny"
branches_sharing_code = "deny"
useless_asref = "deny"
redundant_closure_for_method_calls = "deny"

# Note: RSA 0.9.8 has RUSTSEC-2023-0071 (Marvin Attack) - no fix available yet
# Used only via sqlx-mysql, assess if network exposure exists
# Security fixes applied via workspace dependencies
