[package]
name = "tallyio-tests"
version = "0.1.0"
edition = "2021"
description = "Centralizirano testno okolje za TallyIO MEV platformo"
publish = false

[dependencies]
# Interne odvisnosti na TallyIO komponente
core = { path = "../crates/core" }
blockchain = { path = "../crates/blockchain" }
strategies = { path = "../crates/strategies" }
risk = { path = "../crates/risk" }
secure_storage = { path = "../crates/secure_storage" }
data_storage = { path = "../crates/data_storage" }
cross_chain = { path = "../crates/cross_chain" }
metrics = { path = "../crates/metrics" }

# Zunanje odvisnosti
tokio = { version = "1.28", features = ["full", "test-util"] }
futures = "0.3"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
proptest = "1.2"
libfuzzer-sys = "0.4"
tempfile = "3.8"
rand = "0.8"
pretty_assertions = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
grcov = "0.8"

# Odvisnosti za testiranje MEV komponent
ethers = { version = "2.0", features = ["ws", "rustls"] }
ethers-providers = "2.0"
ethers-core = "2.0"
solana-client = "1.16"
solana-sdk = "1.16"

[[bench]]
name = "core_components_benchmark"
path = "benchmarks/core_components_benchmark.rs"
harness = false

[[bench]]
name = "secure_storage_benchmark"
path = "benchmarks/secure_storage_benchmark.rs"
harness = false

[[bench]]
name = "blockchain_benchmarks"
path = "benchmarks/blockchain_benchmarks.rs"
harness = false

[features]
default = []
integration-tests = []  # Omogoči za integracijske teste
stress-tests = []       # Omogoči za stresne teste (long-running)
property-tests = []     # Omogoči za property-based teste
coverage = []           # Omogoči za teste pokritosti kode
latency-tests = []      # Omogoči za teste latence
