[package]
name = "tallyio-api"
version = "0.1.0"
edition = "2021"
description = "TallyIO REST and WebSocket API"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hyper = { workspace = true }
tungstenite = { workspace = true }
tokio-tungstenite = { workspace = true }
tallyio-core = { path = "../core" }
