[package]
name = "chain_core"
version = "0.1.0"
edition = "2021"
authors = ["TallyIO Team <dev@tallyio.com>"]
description = "Ultra-performance multi-chain coordination engine for TallyIO"
license = "MIT"
repository = "https://github.com/vrcekb/tallyio"
readme = "README.md"
keywords = ["blockchain", "mev", "arbitrage", "defi", "crypto"]
categories = ["cryptography", "network-programming", "finance"]

[dependencies]
# Core dependencies from workspace
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
tokio = { workspace = true }
rayon = { workspace = true }
crossbeam = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
ahash = { workspace = true }
smallvec = { workspace = true }
tinyvec = { workspace = true }

# Crypto dependencies
secp256k1 = { workspace = true }
k256 = { workspace = true }
sha3 = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }

# Networking
reqwest = { workspace = true }
tungstenite = { workspace = true }
quinn = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
postcard = { workspace = true }

# Database
sqlx = { workspace = true }
redis = { workspace = true }

# Monitoring
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
prometheus = { workspace = true }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Random number generation
fastrand = "2.0"

# URL parsing
url = "2.4"

# HTTP client
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"

# WebSocket
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }

# JSON-RPC
jsonrpsee = { version = "0.20", features = ["client", "server", "macros"] }

# Ethereum specific
ethers = { workspace = true }
alloy-primitives = "0.4"
alloy-rlp = "0.3"

# Performance monitoring
criterion = { version = "0.5", optional = true }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
proptest = "1.3"
criterion = "0.5"

[features]
default = ["ethereum", "bsc", "polygon", "arbitrum", "optimism", "base", "avalanche"]
ethereum = []
bsc = []
polygon = []
arbitrum = []
optimism = []
base = []
avalanche = []
benchmarks = ["criterion"]

[lib]
name = "chain_core"
path = "src/lib.rs"
