[package]
name = "tallyio-liquidation"
version = "0.1.0"
edition = "2021"
description = "TallyIO liquidation strategies"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tallyio-core = { path = "../core" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

[[bench]]
name = "bench_liquidation"
harness = false
