[package]
name = "secure_storage"
version = "0.1.0"
edition = "2021"

[dependencies]
ring = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["fs", "io-util", "rt", "macros"] }
zeroize = { version = "1.7", features = ["derive"] }
chacha20poly1305 = "0.10"
rand = "0.8"
bincode = "1.3"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.10"

[[bench]]
name = "secure_storage_benchmark"
harness = false
path = "benches/secure_storage_benchmark.rs"
