[package]
name = "tallyio-web-ui"
version = "0.1.0"
edition = "2021"
description = "TallyIO web UI backend"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hyper = { workspace = true }
tallyio-core = { path = "../core" }
tallyio-api = { path = "../api" }
